examples/test/testpolicy1407.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1407
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key12: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value15
      podSelector:
        matchLabels:
          key35: value34
          key21: value20
          key23: value21
